src/css/seed.less
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -ms-box-sizing: border-box;
  box-sizing: border-box;
}

@mobile: ~"(max-width: 720px)";
@contamination-color: #C30;
@narrative-color: #048;
@condensed: "Roboto Condensed", sans-serif;
@display: "Oswald", sans-serif;
@hed: "Archivo Black", sans-serif;
@sans-serif: Arial, Helvetica, sans-serif;
@serif: Georgia, Times, serif;

body {
  margin: 0;
  padding: 0;
  color: #222;
}

hotspot-map {
  font-family: @condensed;
  position: relative;
  display: block;

  .image-container {
    position: relative;
  }

  img {
    width: 100%;
  }

  p.legend-label {
    font-family: @condensed;
    margin: 0;
  }

  .spot {
    position: absolute;
    border-radius: 100%;
    opacity: .5;
    width: 30px;
    height: 30px;
    margin-left: -15px;
    margin-top: -15px;

    @media @mobile {
      width: 40px;
      height: 40px;
      margin-left: -20px;
      margin-top: -20px;
    }

    &.contamination {
      background: @contamination-color;
      // background: radial-gradient(@color 0%, @color 30%, fade(@color, 0%) 90%);
    }

    &.narrative {
      background: @narrative-color;
      // background: radial-gradient(@color 0%, @color 30%, fade(@color, 0%) 90%);
    }

    &.show {
      opacity: 1;
      z-index: 999;

      .popup {
        display: block;
      }
    }
  }

  .ui {
    position: absolute;
    top: 0;
    left: 0;
    width: 30%;
    padding: 8px;
    background: white;
    background: rgba(255, 255, 255, .8);

    @media @mobile {
      position: relative;
      width: 100%;
    }

    input[type=radio] {
      display: none;

      & + label {
        display: block;
        margin: 4px 0;
        padding: 4px;
        color: #888;
        cursor: pointer;
        // border-style: solid;
        // border-color: #888;
        // border-width: 1px;
        // min-height: 4em;
        // border-radius: 4px 0 0 4px;

        &:last-child {
          border-radius: 0 4px 4px 0;
        }

        @media @mobile {
          width: 100%;
          border-radius: 4px;
          float: none;
        }

        h2 {
          margin: 0;
          font-family: @hed;
          font-weight: normal;
          font-size: 14px;
          &::before {
            content: " ";
            margin-right: 8px;
            width: 16px;
            height: 16px;
            line-height: 16px;
            display: inline-block;
            text-align: center;
            background: #CCC;
            border-radius: 100%;
            vertical-align: top;
          }
        }

        h3 {
          font-size: 13px;
          font-family: @sans-serif;
          font-weight: normal;
          margin: 0 0 0 24px;
        }
      }

      &:checked + label {
        color: black;

        h2::before {
          content: "✔";
          color: white;
        }

        &[for=narrative] h2::before {
          background: @narrative-color;
        }

        &[for=measurements] h2::before {
          background: @contamination-color;
        }
      }
    }
  }

}

.popup {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  display: none;
  background: white;
  border: 1px solid #DDD;
  box-shadow: 0 0 16px rgba(0, 0, 0, .4);
  width: 300px;
  padding: 12px;

  @media @mobile {

    &, .popup-left & {
      position: fixed;
      top: 5px !important;
      left: 3% !important;
      width: 94%;
      margin-top: 25px;
      bottom: auto !important;
      -webkit-transform: translateY(0);
      -moz-transform: translateY(0);
      -ms-transform: translateY(0);
      transform: translateY(0);
    }
  }

  .popup-left & {
    right: 100%;
    left: auto;
  }

  h1 {
    font-size: 16px;
    margin: 0;
    font-family: @hed;
    font-weight: normal;
  }

  .content {
    font-size: 16px;
    margin-top: 8px;
  }

  .photo {
    margin-top: 8px;

    img {
      width: 100%;
      max-width: 320px;
    }
    @media @mobile and (orientation: landscape) {
      float: left;
      width: 50%;

      & + .content {
        float: left;
        width: 50%;
        padding: 0 8px;
      }
    }
  }

  .graph {
    margin-top: 10px;
    clear: both;

    label {
      display: block;
      font-size: 13px;
    }

    @bar-height: 1em;
    .bar {
      height: @bar-height;
      line-height: @bar-height;
      margin: 2px 0 8px 0;

      &.lead {
        background: darkred;
        width: 100%;
        text-align: right;
        padding-right: 4px;
        color: white;
      }

      &.acceptable {
        float: left;
        background: gray;
      }

    }
    .label {
      line-height: @bar-height;
      height: @bar-height;
      float: left;
    }
  }
}

sup {
  vertical-align: text-top;
}

